bug fix for TimeWidget1